# ocestrater

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
docs/: code-review-phase3.md  index.html  spec-shortcuts-model-keychain.md
docs/specs/: code-review-phase2.md  spec-git-review.md  spec-multi-agent.md  spec-snippets.md
site/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  commands.rs  config.rs  git_ops.rs  keychain.rs  lib.rs  main.rs  pty_manager.rs  shortcuts.rs  snippets.rs  trust.rs  workspace.rs
src/components/: AgentPanel.tsx  ModelSelector.tsx  ReviewPanel.tsx  SettingsModal.tsx  ShortcutHandler.tsx  Sidebar.tsx  SnippetManager.tsx  SnippetPalette.tsx  TabBar.tsx  TrustDialog.tsx
src/components/review/: DiffViewer.tsx  FileTree.tsx  ReviewActions.tsx
src/lib/: action-registry.ts  shortcut-parser.ts  tauri.ts  terminal-cache.ts  types.ts
src/lib/__tests__/: action-registry.test.ts  shortcut-parser.test.ts  terminal-cache.test.ts  types.test.ts
src/store/: workspace-store.ts
src/store/__tests__/: workspace-store.test.ts
src/styles/: global.css
