[package]
name = "ocestrater"
version = "0.1.0"
edition = "2024"
description = "High-performance AI agent orchestrator"
license = "MIT"

[lib]
name = "ocestrater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
dirs = "6"
notify = "7"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
